test/interpreter/errors/include_truncated.cc
#inclu
[[err]]---------------------------------------------
interpreter/errors/include_truncated.cc[1:1-1:6]: Macro '#inclu' desconocida.
